# bazel_vhdl_ls_gen

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  gen_vhdl_ls.bash
.bcr/: metadata.template.json
.github/workflows/: release.yml  tag-and-release.yml  test.yml
integration/: BUILD.bazel  MODULE.bazel  vhdl_ls.toml  vhdl_ls.toml.add  vhdl_ls.toml.suffix
integration/my_vhdl_lib/: my_package.vhd
integration/your_vhdl_lib/: my_package.vhd
vhdl_ls_aspect/: BUILD.bazel  vhdl_ls.bzl
