load("@bazel_lib//lib:write_source_files.bzl", "write_source_file")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = ["my_vhdl_lib/my_package.vhd"],
    tags = [
        "vhdl_ls",
        "vhdl_ls_lib_some_library",
        # This removes the path prefix `my_vhdl_lib`.
        "vhdl_ls_rem_my_vhdl_lib",
        # This adds the path prefix `your_vhdl_lib`. Adds are applied
        # after removed.
        "vhdl_ls_add_your_vhdl_lib",
    ],
)

filegroup(
    name = "srcs_2",
    srcs = ["my_vhdl_lib/my_package.vhd"],
    tags = [
        "vhdl_ls",
        "vhdl_ls_lib_some_other_library",
    ],
)

sh_test(
    name = "test",
    srcs = [
        "test.bash",
    ],
    size = "small",
)
